// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Accordion/Item Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_ihaf2_1">
    <div class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_collapsed_ihaf2_120">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item IsDefaultExpanded play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_ihaf2_1">
    <div class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="true"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_open_ihaf2_23"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_ihaf2_115 _content_medium_ihaf2_126">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item IsExpanded play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_ihaf2_1">
    <div class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="true"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_open_ihaf2_23"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_ihaf2_115 _content_medium_ihaf2_126">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item PersistFocusOnClick play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_ihaf2_1">
    <div class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="true"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_open_ihaf2_23"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_ihaf2_115 _content_medium_ihaf2_126">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_ihaf2_1">
    <div class="_tag_ihaf2_11">
      <button id="htmlId"
              class="_header_ihaf2_14  _header_medium_ihaf2_71 dummyClassname"
              lang="nb"
              data-testid="123ID"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_collapsed_ihaf2_120">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_ihaf2_1">
    <div class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71  dummyClassname"
              aria-expanded="true"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100 dummyClassname">
            Meg selv
          </div>
          <p class="_subtitle_ihaf2_107 dummyClassname">
            Beskrivelse
          </p>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_open_ihaf2_23"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_ihaf2_115 _content_medium_ihaf2_126  dummyClassname">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithCustomIcon smoke-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_ihaf2_1">
    <div class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="false"
              type="button"
      >
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
            </path>
          </svg>
        </div>
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_collapsed_ihaf2_120">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithLineBreak smoke-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_ihaf2_1">
    <div class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Tittel som
brekker over flere
linjer
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_collapsed_ihaf2_120">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithOnClick play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_ihaf2_1">
    <div class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_collapsed_ihaf2_120">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithPersistedState play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_ihaf2_1">
    <div class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="true"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_open_ihaf2_23"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_ihaf2_115 _content_medium_ihaf2_126">
      <div class="_container_1k24j_5">
        <input id="checkboxInputId-:ri:"
               class="_input_1k24j_17"
               type="checkbox"
        >
        <label for="checkboxInputId-:ri:"
               class="_label_1k24j_29"
        >
          <span class="_labelCheckbox_1k24j_40">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63">
            <span class>
              Jeg er valgt
            </span>
          </span>
        </label>
        <div id="checkboxErrorId-:rj:"
             aria-live="assertive"
             aria-atomic="true"
        >
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_ihaf2_1">
    <div class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="false"
              type="button"
              id="dummyIdForwardedFromRef"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_collapsed_ihaf2_120">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithTitleAs play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_ihaf2_1">
    <h1 class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Heading h1
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </h1>
    <div class="_content_collapsed_ihaf2_120">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
  <div class="_accordionItem_ihaf2_1">
    <h2 class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Heading h2
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </h2>
    <div class="_content_collapsed_ihaf2_120">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
  <div class="_accordionItem_ihaf2_1">
    <h3 class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Heading h3
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </h3>
    <div class="_content_collapsed_ihaf2_120">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
  <div class="_accordionItem_ihaf2_1">
    <h4 class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Heading h4
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </h4>
    <div class="_content_collapsed_ihaf2_120">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
  <div class="_accordionItem_ihaf2_1">
    <h5 class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Heading h5
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </h5>
    <div class="_content_collapsed_ihaf2_120">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
  <div class="_accordionItem_ihaf2_1">
    <h6 class="_tag_ihaf2_11">
      <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_ihaf2_76">
          <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
            Heading h6
          </div>
        </div>
        <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
          <svg class="_systemIcon_1b9cs_2 _systemIcon_large_1b9cs_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
            </path>
          </svg>
        </div>
      </button>
    </h6>
    <div class="_content_collapsed_ihaf2_120">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;
